# git-stream

./: .gitignore  .p4ignore  .readthedocs.yml  CHANGELOG.md  DOCUMENTATION.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  vjer.yml
.github/workflows/: build.yml  publish.yml
docs/: coding_standards.py  conf.py  modules.rst
git_stream/: __init__.py  __main__.py
util/: New-Env.ps1  Update-Env.ps1  new-env.sh  update-env.sh
